--- a/index.html
+++ b/index.html
@@ -32,6 +32,365 @@
 
 <body class="debug">
 
+    <header class="container-fluid">
+        <section class="row">
+            <div class="col-12">
+
+
+            </div>
+
+        </section>
+
+        <section class="row bg-black text-light pb-3 horse-background align-items-end">
+            <div class="col-12 text-center">
+                <!-- <i class="mdi mdi-horse-variant fs-1"></i> -->
+
+                <h1>
+
+                    Welcome to Knight Studios
+                </h1>
+
+                <p>
+                    We are a team of talented designers making websites with bootstrap.
+                </p>
+
+                <button class="color-green text-light p-1 px-3">
+                    Get Started
+                </button>
+
+            </div>
+
+            <div class=" col-6">
+
+            </div>
+
+        </section>
+
+        <section class="row">
+            <div class="col-6">
+                <i class="mdi mdi-horse-variant fs-1"></i>
+
+            </div>
+
+            <div class="col-6 d-flex justify-content-center">
+                <p class="me-3">
+                    Home
+                </p>
+
+                <p class="me-3">
+                    About
+                </p>
+
+                <p class="me-3">
+                    Services
+                </p>
+
+                <p class="me-3">
+                    Team
+                </p>
+
+                <p class="me-3">
+                    Pricing
+                </p>
+
+                <p class="me-3">
+                    Drop Down
+                </p>
+
+                <p class="me-3">
+                    Contact
+                </p>
+
+            </div>
+
+
+        </section>
+
+
+    </header>
+
+    <main class="container-fluid">
+
+
+        <section class="row">
+            <div class="col-12">
+                <h2>
+                    About Us
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam, esse?
+                </p>
+            </div>
+
+            <div class="col-6">
+                <img src="test" alt="placeholder">
+            </div>
+            <div class="col-6">
+                <h4>
+                    Lorem ipsum dolor sit amet.
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iure sed quis fugit dignissimos
+                    consectetur corrupti blanditiis amet inventore eligendi, impedit aliquam explicabo repellendus,
+                    ratione alias, placeat at vero ipsum.
+                </p>
+                <p>
+                    <i class="mdi mdi-checkbox-marked"></i>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                </p>
+                <p>
+                    <i class="mdi mdi-checkbox-marked"></i>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                </p>
+                <p>
+                    <i class="mdi mdi-checkbox-marked"></i>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, error voluptatum nulla eveniet
+                    nobis amet sit dolores consectetur quidem quae?
+                </p>
+            </div>
+
+        </section>
+
+
+
+        <section class="row">
+            <div class="col-12">
+                <h2>Services</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat, itaque.
+                </p>
+            </div>
+            <div class="col-6">
+                <p> <i class="mdi mdi-file"></i>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+                <p> <i class="mdi mdi-file"></i>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+                <p> <i class="mdi mdi-file"></i>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+                <p> <i class="mdi mdi-file"></i>
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+
+            </div>
+            <div class="col-6">
+                <img src="test" alt="Computer">
+
+            </div>
+        </section>
+        <section class="row">
+            <div class="col-6">
+                <img src="test" alt="placeholder">
+            </div>
+            <div class="col-6">
+                <h4>
+                    Lorem ipsum dolor sit amet.
+                </h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iure sed quis fugit dignissimos
+                    consectetur corrupti blanditiis amet inventore eligendi, impedit aliquam explicabo repellendus,
+                    ratione alias, placeat at vero ipsum.
+                </p>
+                <p>
+                    <i class="mdi mdi-checkbox-marked"></i>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                </p>
+                <p>
+                    <i class="mdi mdi-checkbox-marked"></i>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                </p>
+                <p>
+                    <i class="mdi mdi-checkbox-marked"></i>
+                    Lorem ipsum dolor sit amet consectetur adipisicing.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, error voluptatum nulla eveniet
+                    nobis amet sit dolores consectetur quidem quae?
+                </p>
+
+        </section>
+        <section class="row justify-content-center">
+            <div class="col-8">
+                <h1 class="fw-bold">Lorem ipsum dolor sit amet.</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus saepe assumenda totam dicta
+                    obcaecati dolores!</p>
+                <div class="accordion" id="accordionExample">
+                    <div class="accordion-item">
+                        <h2 class="accordion-header">
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                Accordion Item #1
+                            </button>
+                        </h2>
+                        <div id="collapseOne" class="accordion-collapse collapse show"
+                            data-bs-parent="#accordionExample">
+                            <div class="accordion-body">
+                                <strong>This is the first item's accordion body.</strong> It is shown by default, until
+                                the collapse plugin adds the appropriate classes that we use to style each element.
+                                These classes control the overall appearance, as well as the showing and hiding via CSS
+                                transitions. You can modify any of this with custom CSS or overriding our default
+                                variables. It's also worth noting that just about any HTML can go within the
+                                <code>.accordion-body</code>, though the transition does limit overflow.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4 d-flex working align-items-center justify-content-center">
+                    <button class="rounded-circle">
+                        <i class="mdi mdi-play-box fs-1 text-success"></i>
+                    </button>
+                </div>
+        </section>
+        <section class="row">
+            <div class="col-12 buildings  text-center align-items-center justify-content-center">
+                <i class="mdi mdi-format-quote-close-outline"></i>
+                <p>Hello</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla odio iste mollitia est, illo tenetur
+                    aspernatur quidem necessitatibus pariatur eum cupiditate iure nobis nemo nostrum!</p>
+                <img src="test" alt="test">
+
+            </div>
+
+        </section>
+        <section class="row">
+            <div class="col-12">
+                <h1 class="fw-b">PRICING</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque sunt harum impedit aperiam fugiat in
+                    voluptates nam soluta voluptatibus aliquam.</p>
+            </div>
+            <div class="col-4 d-flex justify-content-center">
+                <div class="card w-75 m-3">
+                    <div class="card-body text-center">
+                        <p class="fw-bold">FREE</p>
+                        <p>
+                        <h1>$0</h1> /month</p>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p><s>ipsum dolor sit amet.</s></p>
+                        <p><s>ipsum dolor sit amet.</s></p>
+                        <a href="#" class="btn btn-success ">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 d-flex justify-content-center">
+                <div class="card w-75 m-3">
+                    <div class="card-body text-center">
+                        <p class="fw-bold">FREE</p>
+                        <p>
+                        <h1>$0</h1> /month</p>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p><s>ipsum dolor sit amet.</s></p>
+                        <p><s>ipsum dolor sit amet.</s></p>
+                        <a href="#" class="btn btn-success ">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4 d-flex justify-content-center">
+                <div class="card w-75 m-3">
+                    <div class="card-body text-center">
+                        <p class="fw-bold">FREE</p>
+                        <p>
+                        <h1>$0</h1> /month</p>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <p><s>ipsum dolor sit amet.</s></p>
+                        <p><s>ipsum dolor sit amet.</s></p>
+                        <a href="#" class="btn btn-success ">Buy Now</a>
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
+        <section class="row">
+            <div class="col-12">
+                <h1>CONTACT</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid provident cupiditate ratione iste
+                    quibusdam corporis nam dolore fugiat perspiciatis optio.</p>
+            </div>
+            <div class="col-4 d-flex  align-items-center justify-content-center">
+                <div class="card w-50">
+                    <div class="card-body">
+                        <h5 class="mdi mdi-map-marker-circle card-title">Location
+                            <p class="fs-6">Address is here</p>
+                        </h5>
+                        <h5 class=" mdi mdi-email card-title">Email
+
+                        </h5>
+                        <h5 class=" mdi mdi-phone card-title">Call</h5>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-8">
+                <form>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1">
+                    </div>
+                </form>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                </div>
+            </div>
+        </section>
+        <section class="row">
+
+        </section>
+
+    </main>
+
+    <footer class="container-fluid">
+        <section class="row text-center plants">
+            <div class="col-12">
+                <i class="mdi mdi-horse-variant fs-1"></i>
+
+                <h4>
+                    Knight
+                </h4>
+
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas, nobis!
+                </p>
+
+                <form>
+                    <div class="row mb-3">
+                        <label for="colFormLabel" class="col-sm-2 col-form-label">Email</label>
+                        <div class="col-sm-10 d-flex flex-row">
+                            <input type="email" class="form-control" id="colFormLabel">
+                            <button type="submit" class="btn btn-primary">Subscribe</button>
+
+                        </div>
+
+                    </div>
+
+                </form>
+                <i class="mdi mdi-bird text-success"></i>
+                <i class="mdi mdi-alpha-f text-success"></i>
+                <i class="mdi mdi-camera text-success"></i>
+                <i class="mdi mdi-alpha-s-circle text-success"></i>
+                <i class="mdi mdi-briefcase text-success"></i>
+
+
+            </div>
+
+
+        </section>
+
+    </footer>
+
+
 </body>
 
 </html>
