Fixed horse logo

--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
         </section>
 
 
-        <section class="row bg-black text-light pb-3 horse-background align-items-end">
+        <section class="row bg-dark-subtle text-light pb-3 align-items-end">
             <div class="col-12 text-center">
-                <!-- <i class="mdi mdi-horse-variant fs-1"></i> -->
+
+                <img class="horse-logo"
+                    src="http://clipart-library.com/images_k/horse-head-silhouette/horse-head-silhouette-12.png"
+                    alt="horse">
 
                 <h1>
 
@@ -111,7 +114,6 @@
     </header>
 
     <main class="container-fluid">
-
 
         <section class="row">
             <div class="col-12">
