--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.2.96/css/materialdesignicons.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Forum&family=Shrikhand&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -42,15 +49,14 @@
         </section>
 
 
-        <section class="row bg-dark-subtle text-light pb-3 align-items-end">
+        <section class="row bg-dark-subtle text-dark pb-3 align-items-end">
             <div class="col-12 text-center">
 
                 <img class="horse-logo"
                     src="http://clipart-library.com/images_k/horse-head-silhouette/horse-head-silhouette-12.png"
                     alt="horse">
 
-                <h1>
-
+                <h1 class="headings-font">
                     Welcome to Knight Studios
                 </h1>
 
@@ -70,13 +76,15 @@
 
         </section>
 
-        <section class="row">
-            <div class="col-6">
-                <i class="mdi mdi-horse-variant fs-1"></i>
+        <section class="row nav-shadow pt-2">
+            <div class="col-3 ps-5">
+                <img class="small-horse-logo"
+                    src="http://clipart-library.com/images_k/horse-head-silhouette/horse-head-silhouette-12.png"
+                    alt="horse">
 
             </div>
 
-            <div class="col-6 d-flex justify-content-center">
+            <div class="col-9 d-flex justify-content-end all-caps">
                 <p class="me-3">
                     Home
                 </p>
@@ -115,9 +123,9 @@
 
     <main class="container-fluid">
 
-        <section class="row">
+        <section class="row text-center">
             <div class="col-12">
-                <h2>
+                <h2 class="sub-heading-font">
                     About Us
                 </h2>
                 <p>
@@ -126,7 +134,9 @@
             </div>
 
             <div class="col-6">
-                <img src="test" alt="placeholder">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1484&q=80"
+                    alt="meeting">
             </div>
             <div class="col-6">
                 <h4>
